<resources>
    <string name="app_name">TrinityWizardTest</string>
    <string name="contact_title">Contacts</string>
    <string name="main_info">Main Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sub_info">Sub Information</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>