<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.InformationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/information_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/material_default_16dp">

            <TextView
                android:id="@+id/cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.Material.Menu"
                android:textColor="@color/primary_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/save_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAppearance="@android:style/TextAppearance.Material.Menu"
                android:textColor="@color/primary_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_color_300"
        app:layout_constraintTop_toBottomOf="@id/information_toolbar"
        />

    <View
        android:id="@+id/contact_icon_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/oval_icon"
        app:layout_constraintTop_toBottomOf="@id/information_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/material_default_24dp"
        />

    <TextView
        android:id="@+id/main_information_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_info"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@color/grey_color_700"
        android:layout_marginTop="@dimen/material_default_24dp"
        android:layout_marginStart="@dimen/material_default_16dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_icon_image"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_color_300"
        android:layout_marginTop="@dimen/material_default_8dp"
        app:layout_constraintTop_toBottomOf="@id/main_information_text"
        />

    <TextView
        android:id="@+id/first_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="@color/grey_color_700"
        android:layout_marginTop="@dimen/material_default_24dp"
        android:layout_marginStart="@dimen/material_default_16dp"
        app:layout_constraintTop_toBottomOf="@+id/main_information_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name_edittext"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/first_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/first_name_text"
        app:layout_constraintBottom_toBottomOf="@id/first_name_text"
        android:hint="@string/first_name"
        android:imeOptions="actionNext"
        android:layout_marginStart="@dimen/material_default_8dp"
        android:layout_marginEnd="@dimen/material_default_16dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey_color_300"
        android:layout_marginTop="@dimen/material_default_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/first_name_text"
        app:layout_constraintTop_toBottomOf="@id/first_name_text"
        />

    <TextView
        android:id="@+id/last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="@color/grey_color_700"
        android:layout_marginTop="40dp"
        android:layout_marginStart="@dimen/material_default_16dp"
        app:layout_constraintTop_toBottomOf="@+id/first_name_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name_edittext"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/last_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/last_name_text"
        app:layout_constraintBottom_toBottomOf="@id/last_name_text"
        android:imeOptions="actionNext"
        android:hint="@string/last_name"
        android:layout_marginStart="@dimen/material_default_8dp"
        android:layout_marginEnd="@dimen/material_default_16dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey_color_300"
        android:layout_marginTop="@dimen/material_default_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/last_name_text"
        app:layout_constraintTop_toBottomOf="@id/last_name_text"
        />

    <TextView
        android:id="@+id/sub_information_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_info"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@color/grey_color_700"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/material_default_16dp"
        app:layout_constraintTop_toBottomOf="@+id/last_name_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_color_300"
        android:layout_marginTop="@dimen/material_default_8dp"
        app:layout_constraintTop_toBottomOf="@id/sub_information_text"
        />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="@color/grey_color_700"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/material_default_16dp"
        app:layout_constraintTop_toBottomOf="@+id/sub_information_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_edittext"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/last_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/email_text"
        app:layout_constraintBottom_toBottomOf="@id/email_text"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:hint="@string/email"
        android:layout_marginStart="@dimen/material_default_8dp"
        android:layout_marginEnd="@dimen/material_default_16dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey_color_300"
        android:layout_marginTop="@dimen/material_default_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/email_text"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        />

    <TextView
        android:id="@+id/dob_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="@color/grey_color_700"
        android:layout_marginTop="40dp"
        android:layout_marginStart="@dimen/material_default_16dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dob_edittext"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/last_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dob_text"
        app:layout_constraintBottom_toBottomOf="@id/dob_text"
        android:hint="@string/dob"
        android:imeOptions="actionDone"
        android:drawableEnd="@android:drawable/ic_menu_my_calendar"
        android:layout_marginStart="@dimen/material_default_8dp"
        android:layout_marginEnd="@dimen/material_default_16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>